@@ -25,24 +25,32 @@ package eu.solven.adhoc.engine.tabular;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
+import java.util.NavigableSet;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import org.jgrapht.graph.DefaultEdge;
 import org.jgrapht.graph.DirectedAcyclicGraph;
+import org.jgrapht.traverse.TopologicalOrderIterator;
 
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.MultimapBuilder;
+import com.google.common.collect.SetMultimap;
 import com.google.common.collect.Sets;
 
 import eu.solven.adhoc.column.generated_column.IColumnGenerator;
 import eu.solven.adhoc.data.column.IMultitypeColumnFastGet;
+import eu.solven.adhoc.data.column.IMultitypeMergeableColumn;
 import eu.solven.adhoc.data.column.ISliceToValue;
 import eu.solven.adhoc.data.column.SliceToValue;
 import eu.solven.adhoc.data.column.hash.MultitypeHashColumn;
@@ -58,15 +66,17 @@ import eu.solven.adhoc.engine.step.CubeQueryStep;
 import eu.solven.adhoc.eventbus.AdhocLogEvent;
 import eu.solven.adhoc.eventbus.QueryStepIsCompleted;
 import eu.solven.adhoc.filter.editor.SimpleFilterEditor;
-import eu.solven.adhoc.measure.aggregation.carrier.IAggregationCarrier;
+import eu.solven.adhoc.measure.aggregation.IAggregation;
 import eu.solven.adhoc.measure.aggregation.collection.UnionSetAggregation;
 import eu.solven.adhoc.measure.model.Aggregator;
 import eu.solven.adhoc.measure.model.Dispatchor;
 import eu.solven.adhoc.measure.model.EmptyMeasure;
 import eu.solven.adhoc.measure.model.IMeasure;
+import eu.solven.adhoc.query.InternalQueryOptions;
 import eu.solven.adhoc.query.MeasurelessQuery;
 import eu.solven.adhoc.query.StandardQueryOptions;
 import eu.solven.adhoc.query.cube.IAdhocGroupBy;
+import eu.solven.adhoc.query.cube.IHasQueryOptions;
 import eu.solven.adhoc.query.filter.AndFilter;
 import eu.solven.adhoc.query.filter.FilterHelpers;
 import eu.solven.adhoc.query.filter.FilterMatcher;
@@ -76,6 +86,7 @@ import eu.solven.adhoc.query.groupby.GroupByHelpers;
 import eu.solven.adhoc.query.table.TableQuery;
 import eu.solven.adhoc.query.table.TableQueryV2;
 import eu.solven.adhoc.table.ITableWrapper;
+import eu.solven.adhoc.util.AdhocBlackHole;
 import eu.solven.adhoc.util.IAdhocEventBus;
 import eu.solven.adhoc.util.IStopwatch;
 import eu.solven.pepper.core.PepperLogHelper;
@@ -83,15 +94,26 @@ import lombok.Builder;
 import lombok.Builder.Default;
 import lombok.Getter;
 import lombok.NonNull;
+import lombok.Singular;
+import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
 
 /**
- * Default {@link ITableQueryEngine}
+ * Default {@link ITableQueryEngine}.
+ * 
+ * It implements optimizations of the queryPlans projected to the underlying table. Typically:
+ * 
+ * <ul>
+ * <li>Request for `m over c=c1&d=d1` and `m over c=c1&d=d2` should request `m(FILTER d=d1) and m(FILTER d=d2) over
+ * c=c1`</li>
+ * <li>Request for `m groupBy c` and `m groupBy c&d` should request `m groupBy c,c&d`</li>
+ * </ul>
  * 
  * @author Benoit Lacelle
  */
 @Builder
 @Slf4j
+@SuppressWarnings("PMD.CouplingBetweenObjects")
 public class TableQueryEngine implements ITableQueryEngine {
 
 	@NonNull
@@ -101,19 +123,220 @@ public class TableQueryEngine implements ITableQueryEngine {
 
 	@NonNull
 	@Default
-	final IAdhocEventBus eventBus = IAdhocEventBus.BLACK_HOLE;
+	final IAdhocEventBus eventBus = AdhocBlackHole.getInstance();
+
+	@Value
+	@Builder
+	protected static class SplitTableQueries {
+		// Holds the TableQuery which can not be implicitly evaluated, and needs to be executed directly
+		@Singular
+		@NonNull
+		Set<CubeQueryStep> inducers;
+
+		// Holds the TableQuery which can be evaluated implicitly from underlyings
+		@Singular
+		@NonNull
+		Set<CubeQueryStep> induceds;
+
+		@NonNull
+		DirectedAcyclicGraph<CubeQueryStep, DefaultEdge> tableQueriesDag;
+
+		public static SplitTableQueries empty() {
+			return SplitTableQueries.builder()
+					.induceds(Set.of())
+					.inducers(Set.of())
+					.tableQueriesDag(new DirectedAcyclicGraph<>(DefaultEdge.class))
+					.build();
+		}
+	}
 
 	@Override
 	public Map<CubeQueryStep, ISliceToValue> executeTableQueries(QueryPod queryPod, QueryStepsDag queryStepsDag) {
 		Set<TableQuery> tableQueries = prepareForTable(queryPod, queryStepsDag);
 
-		Set<TableQueryV2> tableQueriesV2 = TableQueryV2.fromV1(tableQueries);
+		SplitTableQueries inducerAndInduced = splitInduced(queryPod, tableQueries);
+
+		Set<TableQueryV2> tableQueriesV2 = groupByEnablingFilterPerMeasure(inducerAndInduced.getInducers());
 
 		Map<CubeQueryStep, ISliceToValue> stepToValues = executeTableQueries(queryPod, queryStepsDag, tableQueriesV2);
+
+		evaluateImplicit(queryPod, stepToValues, inducerAndInduced);
 
 		reportAfterTableQueries(queryPod, stepToValues);
 
 		return stepToValues;
+	}
+
+	/**
+	 * 
+	 * @param hasOptions
+	 * @param stepToValues
+	 *            a mutable {@link Map}. May need to be thread-safe.
+	 * @param inducerAndInduced
+	 */
+	protected void evaluateImplicit(IHasQueryOptions hasOptions,
+			Map<CubeQueryStep, ISliceToValue> stepToValues,
+			SplitTableQueries inducerAndInduced) {
+		DirectedAcyclicGraph<CubeQueryStep, DefaultEdge> dag = inducerAndInduced.getTableQueriesDag();
+		var iterator = new TopologicalOrderIterator<>(dag);
+
+		iterator.forEachRemaining(induced -> {
+			if (stepToValues.containsKey(induced)) {
+				// Happens typically for inducers steps
+				log.debug("step={} is already evaluated", induced);
+			} else {
+				List<CubeQueryStep> inducers = dag.incomingEdgesOf(induced).stream().map(dag::getEdgeSource).toList();
+				if (inducers.size() != 1) {
+					throw new IllegalStateException("Induced should have a single inducer. induced=%s inducers=%s"
+							.formatted(induced, inducers));
+				}
+
+				CubeQueryStep inducer = inducers.getFirst();
+				ISliceToValue inducerValues = stepToValues.get(inducer);
+
+				Aggregator aggregator = (Aggregator) inducer.getMeasure();
+				IAggregation aggregation = factories.getOperatorFactory().makeAggregation(aggregator);
+				IMultitypeMergeableColumn<SliceAsMap> inducedValues =
+						factories.getColumnsFactory().makeColumn(aggregation, List.of(inducerValues));
+				inducerValues.forEachSlice(slice -> inducedValues
+						.merge(inducedGroupBy(induced.getGroupBy().getGroupedByColumns(), slice)));
+
+				stepToValues.put(induced, SliceToValue.forGroupBy(induced).values(inducedValues).build());
+
+				if (hasOptions.isDebugOrExplain()) {
+					Set<String> removedGroupBys = Sets.difference(inducer.getGroupBy().getGroupedByColumns(),
+							induced.getGroupBy().getGroupedByColumns());
+					log.info("[EXPLAIN] size={} induced size={} by removing groupBy={} ({} induced {})",
+							inducerValues.size(),
+							inducedValues.size(),
+							removedGroupBys,
+							inducer,
+							induced);
+				}
+			}
+		});
+
+	}
+
+	protected SliceAsMap inducedGroupBy(NavigableSet<String> groupedByColumns, SliceAsMap inducer) {
+		Map<String, Object> induced = new LinkedHashMap<>();
+
+		groupedByColumns.forEach(inducedColumn -> {
+			induced.put(inducedColumn, inducer.getRawSliced(inducedColumn));
+		});
+
+		// TODO Rely on AdhocMap
+		return SliceAsMap.fromMap(induced);
+	}
+
+	/**
+	 * 
+	 * @param tableQueries
+	 * @return an Object partitioning TableQuery which can not be induced from those which can be induced.
+	 */
+	@SuppressWarnings("PMD.CompareObjectsWithEquals")
+	protected SplitTableQueries splitInduced(IHasQueryOptions hasOptions, Set<TableQuery> tableQueries) {
+		if (tableQueries.isEmpty()) {
+			return SplitTableQueries.empty();
+		}
+
+		DirectedAcyclicGraph<CubeQueryStep, DefaultEdge> tableQueriesDag =
+				new DirectedAcyclicGraph<>(DefaultEdge.class);
+
+		// Inference in aggregator based: `k1` does not imply `k2`, `k1.SUM` does not imply `k1.MAX`
+		SetMultimap<Aggregator, CubeQueryStep> aggregatorToQueries =
+				MultimapBuilder.hashKeys().linkedHashSetValues().build();
+
+		// Register all tableQueries as a vertex
+		tableQueries.forEach(tq -> {
+			tq.getAggregators().stream().forEach(agg -> {
+				CubeQueryStep step = CubeQueryStep.edit(tq).measure(agg).build();
+				tableQueriesDag.addVertex(step);
+				aggregatorToQueries.put(agg, step);
+			});
+		});
+
+		if (hasOptions.getOptions().contains(InternalQueryOptions.DISABLE_AGGREGATOR_INDUCTION)) {
+			return SplitTableQueries.builder()
+					.inducers(aggregatorToQueries.values())
+					.tableQueriesDag(tableQueriesDag)
+					.build();
+		}
+
+		// BEWARE Following algorithm is quadratic: for each tableQuery, we evaluate all other tableQuery.
+		aggregatorToQueries.asMap().forEach((a, steps) -> {
+			// groupBy number of groupedBy columns, in order to filter the candidate tableQueries
+			int maxGroupBy =
+					steps.stream().mapToInt(tb -> tb.getGroupBy().getGroupedByColumns().size()).max().getAsInt();
+			List<Set<CubeQueryStep>> nbGroupByToQueries = IntStream.rangeClosed(0, maxGroupBy)
+					.<Set<CubeQueryStep>>mapToObj(i -> new LinkedHashSet<>())
+					.toList();
+
+			// GroupBy tableQueries by groupBy cardinality, as we're guaranteed that a tableQuery with more groupBy can
+			// not be inferred by a tableQUery with less groupBys.
+			steps.forEach(step -> {
+				nbGroupByToQueries.get(step.getGroupBy().getGroupedByColumns().size()).add(step);
+			});
+
+			steps.forEach(induced -> {
+				AtomicBoolean hasFoundInducer = new AtomicBoolean();
+
+				// right must have more groupBys than left, else right can not induce left
+				for (int i = induced.getGroupBy().getGroupedByColumns().size(); i < nbGroupByToQueries.size(); i++) {
+					nbGroupByToQueries.get(i)
+							.stream()
+							// No edge to itself
+							.filter(inducer -> inducer != induced)
+							// Same context (i.e. same filter, customMarker, options)
+							.filter(inducer -> MeasurelessQuery.edit(inducer)
+									.groupBy(IAdhocGroupBy.GRAND_TOTAL)
+									// TODO We may add some induced rules even on differing filter. For instance:
+									// `groupBy:ccy&ccy=EUR|USD` can induce `ccy=EUR`
+									.build()
+									.equals(MeasurelessQuery.edit(induced).groupBy(IAdhocGroupBy.GRAND_TOTAL).build()))
+							// If right has all groupBy of left, it means right has same or more groupBy than left,
+							// hence right can be used to compute left
+							.filter(inducer -> inducer.getGroupBy()
+									.getGroupedByColumns()
+									.containsAll(induced.getGroupBy().getGroupedByColumns()))
+							// as soon as left is induced, we do not need to search for alternative inducer
+							// BEWARE As we find first, we'll spot the inducer with a minimal additional groupBy, hence
+							// probably a smaller induced, hence probably a better inducer
+							.findFirst()
+							.ifPresent(inducer -> {
+								// right can be used to compute left
+								tableQueriesDag.addEdge(inducer, induced);
+								hasFoundInducer.set(true);
+
+								if (hasOptions.isDebugOrExplain()) {
+									log.info("[EXPLAIN] {} will induce {}", inducer, induced);
+								}
+							});
+
+					if (hasFoundInducer.get()) {
+						break;
+					}
+				}
+			});
+		});
+
+		// Collect the tableQueries which can not be induced by another tableQuery
+		Set<CubeQueryStep> notInduced = tableQueriesDag.vertexSet()
+				.stream()
+				.filter(tq -> tableQueriesDag.incomingEdgesOf(tq).isEmpty())
+				.collect(ImmutableSet.toImmutableSet());
+		// Collect the tableQueries which can be induced
+		Set<CubeQueryStep> induced = ImmutableSet.copyOf(Sets.difference(tableQueriesDag.vertexSet(), notInduced));
+
+		return SplitTableQueries.builder()
+				.inducers(notInduced)
+				.induceds(induced)
+				.tableQueriesDag(tableQueriesDag)
+				.build();
+	}
+
+	protected Set<TableQueryV2> groupByEnablingFilterPerMeasure(Set<CubeQueryStep> tableQueries) {
+		return TableQueryV2.fromV1(TableQuery.fromSteps(tableQueries));
 	}
 
 	protected void reportAfterTableQueries(QueryPod queryPod,
@@ -230,31 +453,36 @@ public class TableQueryEngine implements ITableQueryEngine {
 	 * @param queryStepsDag
 	 * @return the Set of {@link TableQuery} to be executed.
 	 */
-	public Set<TableQuery> prepareForTable(QueryPod queryPod, QueryStepsDag queryStepsDag) {
+	protected Set<TableQuery> prepareForTable(QueryPod queryPod, QueryStepsDag queryStepsDag) {
 		// Pack each steps targeting the same groupBy+filters. Multiple measures can be evaluated on such packs.
 		Map<MeasurelessQuery, Set<Aggregator>> measurelessToAggregators = new LinkedHashMap<>();
 
 		// https://stackoverflow.com/questions/57134161/how-to-find-roots-and-leaves-set-in-jgrapht-directedacyclicgraph
 		DirectedAcyclicGraph<CubeQueryStep, DefaultEdge> dag = queryStepsDag.getDag();
-		dag.vertexSet().stream().filter(step -> dag.outgoingEdgesOf(step).isEmpty()).forEach(step -> {
-			IMeasure leafMeasure = queryPod.resolveIfRef(step.getMeasure());
+		dag.vertexSet()
+				.stream()
+				// Consider only leaves steps.
+				// BEWARE We could filter for `Aggregator` but it may be relevant to behave specifically on
+				// `Transformator` with no undelryingSteps
+				.filter(step -> dag.outgoingEdgesOf(step).isEmpty())
+				.forEach(step -> {
+					IMeasure leafMeasure = queryPod.resolveIfRef(step.getMeasure());
 
-			if (leafMeasure instanceof Aggregator leafAggregator) {
-				MeasurelessQuery measureless = MeasurelessQuery.edit(step).build();
+					if (leafMeasure instanceof Aggregator leafAggregator) {
+						MeasurelessQuery measureless = MeasurelessQuery.edit(step).build();
 
-				// We could analyze filters, to swallow a query filtering `k=v` if another query
-				// filters `k=v|v2`. This is valid only if they were having the same groupBy, and groupBy includes `k`
-				measurelessToAggregators
-						.merge(measureless, Collections.singleton(leafAggregator), UnionSetAggregation::unionSet);
-			} else if (leafMeasure instanceof EmptyMeasure) {
-				log.trace("An EmptyMeasure has no underlying measures");
-			} else {
-				// Happens on Transformator with no underlying queryStep (no underlying measure, or planned as having no
-				// underlying step)
-				log.debug("step={} has been planned having no underlying step", step);
-				// throw new IllegalStateException("Expected simple aggregators. Got %s".formatted(leafMeasure));
-			}
-		});
+						// Aggregator leaves are groupedBy context (groupBy+filter+customMarker)
+						// They may be later grouped by different granularities (e.g. to leverage `FILTER` per measure)
+						measurelessToAggregators
+								.merge(measureless, Set.of(leafAggregator), UnionSetAggregation::unionSet);
+					} else if (leafMeasure instanceof EmptyMeasure) {
+						log.trace("An EmptyMeasure has no underlying measures");
+					} else {
+						// Happens on Transformator with no underlying queryStep (no underlying measure, or planned as
+						// having no underlying step (e.g. Filtrator with matchNone filter))
+						log.debug("step={} has been planned having no underlying step", step);
+					}
+				});
 
 		return measurelessToAggregators.entrySet().stream().map(e -> {
 			MeasurelessQuery measurelessQuery = e.getKey();
@@ -480,34 +708,19 @@ public class TableQueryEngine implements ITableQueryEngine {
 					.measure(aggregator)
 					.build();
 
-			boolean doPurgeCarriers;
-			if (factories.getOperatorFactory()
-					.makeAggregation(aggregator) instanceof IAggregationCarrier.IHasCarriers) {
-				if (queryPod.getOptions().contains(StandardQueryOptions.AGGREGATION_CARRIERS_STAY_WRAPPED)) {
-					doPurgeCarriers = false;
-				} else {
-					doPurgeCarriers = true;
-				}
-			} else {
-				doPurgeCarriers = false;
-			}
+			// `.closeColumn` may be an expensive operation. e.g. it may sort slices.
+			IMultitypeColumnFastGet<SliceAsMap> values = coordinatesToAggregates.closeColumn(filteredAggregator);
 
-			// `.closeColumn` is an expensive operation. It induces a delay, e.g. by sorting slices.
-			// TODO Sorting is not needed if we do not compute a single transformator with at least 2 different
-			// underlyings
-			IMultitypeColumnFastGet<SliceAsMap> column =
-					coordinatesToAggregates.closeColumn(filteredAggregator, doPurgeCarriers);
-
-			IMultitypeColumnFastGet<SliceAsMap> columnWithSuppressed;
+			IMultitypeColumnFastGet<SliceAsMap> valuesWithSuppressed;
 			if (suppressedGroupBys.isEmpty()) {
-				columnWithSuppressed = column;
+				valuesWithSuppressed = values;
 			} else {
-				columnWithSuppressed = restoreSuppressedGroupBy(queryStep, suppressedGroupBys, column);
+				valuesWithSuppressed = restoreSuppressedGroupBy(queryStep, suppressedGroupBys, values);
 			}
 
 			// The aggregation step is done: the storage is supposed not to be edited: we
 			// re-use it in place, to spare a copy to an immutable container
-			queryStepToValues.put(queryStep, SliceToValue.builder().column(columnWithSuppressed).build());
+			queryStepToValues.put(queryStep, SliceToValue.forGroupBy(queryStep).values(valuesWithSuppressed).build());
 		});
 		return queryStepToValues;
 	}
